--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "passport-yougedi-com",
+  "name": "passport",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "serve-favicon": "^2.3.0",
-    "morgan": "^1.6.1",
-    "cookie-parser": "^1.3.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
-    "method-override": "^2.3.0",
+    "cookie-parser": "^1.3.3",
+    "express": "^4.13.3",
+    "express-handlebars": "^2.0.1",
+    "express-session": "~1.11.3",
     "glob": "^5.0.3",
+    "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
-    "express-handlebars": "^2.0.1"
+    "morgan": "^1.6.1",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-qq": "0.0.3",
+    "passport-wechat": "^0.1.3",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
