--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
+    "cookie-session": "~1.2.0",
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
-    "express-session": "~1.11.3",
     "glob": "^5.0.3",
     "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
-    "passport": "^0.3.0",
+    "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "passport-qq": "0.0.3",
     "passport-wechat": "^0.1.3",
