--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
     "cookie-session": "~1.2.0",
     "express": "^4.13.3",
@@ -16,6 +17,7 @@
     "glob": "^5.0.3",
     "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
+    "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.6.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
