--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
     "cookie-session": "~1.2.0",
+    "email": "^0.2.6",
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
     "glob": "^5.0.3",
@@ -23,6 +24,7 @@
     "passport-local": "^1.0.0",
     "passport-qq": "0.0.3",
     "passport-wechat": "^0.1.3",
+    "passport-weibo": "^0.1.2",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
