--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "connect-flash": "^0.1.1",
@@ -21,7 +20,7 @@
     "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.6.1",
     "passport": "^0.2.2",
-    "passport-local": "^1.0.0",
+    "passport-local": "~1.0.0",
     "passport-qq": "0.0.3",
     "passport-wechat": "^0.1.3",
     "passport-weibo": "^0.1.2",
