--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport-qq": "0.0.3",
     "passport-wechat": "^0.1.3",
     "passport-weibo": "^0.1.2",
+    "request": "~2.62.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
