--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
     "mongoose-findorcreate": "^0.1.2",
+    "mongoose-timestamp": "^0.4.0",
     "morgan": "^1.6.1",
     "passport": "^0.2.2",
     "passport-local": "~1.0.0",
