--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name passport.yougedi.com;
+    server_name passport.example.com;
     root /home/wwwroot/passport;
 
     location / {
@@ -12,5 +12,5 @@ server {
         proxy_redirect off;
     }
 
-    access_log /home/wwwlogs/passport.log access;
+    access_log off;
 }
